PyMaker/datas/object2/RawHTML/i17601/Python_DOC_referPages.raise-improperlyconfigured-exc-info1-exc-info2.txt
<div class="post-text" itemprop="text">
<p>I created a django (1.6.1) project and using mongodb with it. when I ran the <code>python manage.py runserver 0.0.0.0:8000</code> to start server it gives me the following error   </p>
<pre><code>  File "D:\Python34\lib\importlib\__init__.py", line 129, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "&lt;frozen importlib._bootstrap&gt;", line 2186, in _gcd_import
  File "&lt;frozen importlib._bootstrap&gt;", line 2169, in _find_and_load
  File "&lt;frozen importlib._bootstrap&gt;", line 2158, in _find_and_load_unlocked
  File "&lt;frozen importlib._bootstrap&gt;", line 1209, in _load_unlocked
  File "&lt;frozen importlib._bootstrap&gt;", line 1133, in _exec
  File "&lt;frozen importlib._bootstrap&gt;", line 1432, in exec_module
  File "&lt;frozen importlib._bootstrap&gt;", line 1537, in get_code
  File "&lt;frozen importlib._bootstrap&gt;", line 1497, in source_to_code
  File "&lt;frozen importlib._bootstrap&gt;", line 321, in _call_with_frames_removed
  File "D:\Python34\lib\site-packages\django_mongodb_engine\base.py", line 234
    raise ImproperlyConfigured, exc_info[1], exc_info[2]
                              ^
SyntaxError: invalid syntax
</code></pre>
<p>What does this error mean? </p>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://pypi.python.org/pypi/django-mongodb-engine" rel="noreferrer">django-mongodb-engine</a> does not support Python 3.x.</p>
<blockquote>
<p>Categories</p>
<p>...</p>
<pre><code>Programming Language :: Python :: 2.5
Programming Language :: Python :: 2.6
Programming Language :: Python :: 2.7
</code></pre>
</blockquote>
<h2>Meaning of the error:</h2>
<p>Syntax for the <a href="http://docs.python.org/3/reference/simple_stmts.html#the-raise-statement" rel="noreferrer"><code>raise</code> statement</a> changed in Python 3.x. <code>raise expression, expression, expression</code> syntax is not valid in Python 3.x.</p>
<pre><code>&gt;&gt;&gt; raise ValueError, 'msg'
  File "&lt;stdin&gt;", line 1
    raise ValueError, 'msg'
                    ^
SyntaxError: invalid syntax

&gt;&gt;&gt; raise ValueError('msg')
Traceback (most recent call last):
  File "&lt;stdin&gt;", line 1, in &lt;module&gt;
ValueError: msg
</code></pre>
</div>
<span class="comment-copy">how to use mongo db in python 3</span>
<span class="comment-copy">@MdHasiburRahaman, There's a package called <a href="https://pypi.python.org/pypi/django-mongodb-engine-py3/" rel="nofollow noreferrer"><code>django-mongodb-engine-py3</code></a>.</span>
